--- a/htmlFiles/hobbies.html
+++ b/htmlFiles/hobbies.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <h5>My hobbies are</h5>
+    <ol>
+      <li>Travelling</li>
+      <li>Watching movies</li>
+      <li>Playing badminton</li>
+    </ol>
   </body>
 </html>
