adding background color to link pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>Personal Portfolio</title>
   </head>
   <body>
@@ -89,7 +90,7 @@
         </tr>
       </table>
       <hr />
-      <a href="./htmlFiles/hobbies.html">My Hobbies</a>
+      <a href="htmlFiles/hobbies.html">My Hobbies</a>
       <a href="./htmlFiles/contact.html">Contact Me</a>
     </main>
   </body>
